Recyclerview Remove & Insert Items (only according to tutorial, it still needs to be adjusted!)
/java/DashboardAdapter:
InsertDashboardItem(), removeDashboardItem(), buttons & editText, OnClickListeners()

/res/layout/activity_main:
buttons & editText

/res/strings:
buttons & editText

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">mappo</string>
+    <string name="insert_btn">insert</string>
+    <string name="remove_btn">remove</string>
 </resources>
