New Activity & 2nd RecyclerView for appointment details
/java/AppointmentAdapter
new for appointment recyclerview

/java/AppointmentItem
new for recyclerview

/res/drawable/appointment_cat_buisness_image.xml
wildcard

/res/layout/
appointmentview_item.xml for AppointmentItems

/res/layout/activity_appointments:
new activity for appointment details

/res/values/strings.xml
new placeholder strings

ERRORS:
Binder error: fixed (bad virtual device)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">mappo</string>
     <string name="insert_btn">insert</string>
     <string name="remove_btn">remove</string>
+    <string name="appointment_wildcard">Platzhalter</string>
 </resources>
